--- a/generators/mobile/templates/template/_layout/base.html
+++ b/generators/mobile/templates/template/_layout/base.html
@@ -3,25 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}{% endblock %}</title>
-	<script>(function() {
-		var mengvalue = -1, designwidth = 720;
-        var phoneWidth = parseInt(window.screen.width);
-        var phoneScale = phoneWidth / designwidth;
-        var ua = navigator.userAgent;
-        if (/Android (\d+\.\d+)/.test(ua)) {
-            var version = parseFloat(RegExp.$1);
-            // andriod 2.3
-            if (version > 2.3) {
-                document.write('<meta name="viewport" content="width='+ designwidth +', minimum-scale = ' + phoneScale + ', maximum-scale = ' + phoneScale + '">');
-                // andriod 2.3以上
-            } else {
-                document.write('<meta name="viewport" content="width='+ designwidth +'">');
-            }
-            // 其他系统
-        } else {
-            document.write('<meta name="viewport" content="width='+ designwidth +', user-scalable=no">');
-        }
-	})();</script>
+	<script>
+      !(function(f,d){var a=d.documentElement,c=640,b=f.screen.width||320,e=parseFloat(b/c).toFixed(2);document.write('<meta name="viewport" content="width='+c+", minimum-scale = "+e+", maximum-scale = "+e+'", user-scalable=no">')})(window,document);
+  </script>
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"/> -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
