--- a/generators/mobile/templates/static/less/main.less
+++ b/generators/mobile/templates/static/less/main.less
@@ -7,3 +7,21 @@
 
 // 导入frontui
 //@import "../../bower_components/frontui/static/less/_share.less"
+
+// 设计图750px
+body {
+	font-size: 24px; /*px*/
+}
+
+/**
+ * TODO:
+ *     font-size: 30px; /*px*/
+ /*                     添加注释，转换成dpr*/
+ /*    height: 88px;  自动转成rem单位*/
+/* */
+
+.header {
+	font-size: 30px; /*px*/
+	width: 100%;
+	height: 88px;
+}
