--- a/generators/mobile/templates/template/_layout/layout.html
+++ b/generators/mobile/templates/template/_layout/layout.html
@@ -4,7 +4,7 @@
 {#% import "_components/navigator.html" as navigator %#}
 
 {% block globalCss %}
-	<link rel="stylesheet" href="{{static}}/css/main.css?v={{ version }}">
+	<link rel="stylesheet" href="{{static}}/css/main.debug.css?v={{ version }}">
 {% endblock %}
 
 {% block globalJs %}
