--- a/generators/app/templates/template/_模板常用标签.html
+++ b/generators/app/templates/template/_模板常用标签.html
@@ -21,6 +21,10 @@
 {% block body %}
 	body内容写在这里aaabbbccc
 
+  <p>
+    <a href="http://mozilla.github.io/nunjucks/cn/templating.html" class="link-stardard">nunjucks中文文档</a>
+  </p>
+
 	{% import "_components/navigator.html" as navigator %}
 	{{ navigator.current('detail') }}
 
