--- a/generators/app/templates/template/_layout/base.html
+++ b/generators/app/templates/template/_layout/base.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta http-equiv="Cache-Control" content="no-siteapp" />
-        <meta name="renderer" content="webkit">
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="copyright" content="本页版权归www.frontpay.cn所有·All Rights Reserved" />
-        <meta name="description" content="xxx" />
-        <meta name="keywords" content="xxx" />
-        <meta name="Robots" content="all" />
-        <title>{% block title %}{% endblock %}</title>
-        
-        {% block globalCss %}{% endblock %}
-        {% block css %}{% endblock %}
-        
-        <!--[if IE 8]>
-		    <link rel="stylesheet" type="text/css" href="{{ static }}/css/ie-8.css?v={{ version }}">
-        <![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge;chorme=1" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="copyright" content="本页版权归www.frontpay.cn所有·All Rights Reserved" />
+    <meta name="description" content="xxx" />
+    <meta name="keywords" content="xxx" />
+    <meta name="Robots" content="all" />
+    <title>{% block title %}{% endblock %}</title>
+    <!--[if lt IE 7]>
+    <script >
+      window.onload = function(){ location.href='提示升级.html'; }
+    </script>
+    <![endif]-->
 
-        <!--[if lt IE 8]>
-		    <link rel="stylesheet" type="text/css" href="{{ static }}/css/ie-76.css?v={{ version }}">
-        <![endif]-->
-        
-        <!-- 字体图标兼容 IE 76 样式 （因为 fonticon 的兼容样式在 less 编译中出错，所以直接用 css，不编译）-->   
-        <!--[if lte IE 7]>
-            <link rel="stylesheet" type="text/css" href="{{ static }}/iconfont-ie7/ie7.css?v={{ version }}">
-        <![endif]-->
-        <!-- 字体图标 IE 7 以下JS兼容 -->
-        <!--[if lte IE 7]>
-		    <script type="text/javascript" src="{{ static }}/iconfont-ie7/ie7.js?v={{ version }}"></script>
-        <![endif]-->
+    {% block globalCss %}{% endblock %}
+    {% block css %}{% endblock %}
 
-        <!-- html5 Dom 替换方案 以支持IE7 -->
-        <!--[if lte IE 9]>
-		    <script type="text/javascript" src="{{ bower_components }}/html5shiv/dist/html5shiv.min.js?v={{ version }}"></script>
-        <![endif]-->
-        <!--[if IE 9]>
-		    <script type="text/javascript" src="{{ bower_components }}/respond/dest/respond.min.js?v={{ version }}"></script>
-        <![endif]-->
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="{{ static }}/css/ie-8.css?v={{ version }}">
+    <![endif]-->
+    <!-- IE7-fix样式，字体图标兼容 IE 76 样式 （因为 fonticon 的兼容样式在 less 编译中出错，所以直接用 css，不编译）-->
+    <!--[if lte IE 7]>
+    <link rel="stylesheet" href="{{ static }}/css/ie-76.css?v={{ version }}">
+    <link rel="stylesheet" href="{{ static }}/iconfont-ie7/ie7.css?v={{ version }}">
+    <script src="{{ static }}/iconfont-ie7/ie7.js?v={{ version }}"></script>
+    <![endif]-->
+    <!-- html5 Dom 替换方案 以支持IE7 -->
+    <!--[if lte IE 9]>
+    <script src="{{ bower_components }}/html5shiv/dist/html5shiv.min.js?v={{ version }}"></script>
+    <script src="{{ bower_components }}/respond/dest/respond.min.js?v={{ version }}"></script>
+    <script src="{{ bower_components}}/es5-shim/es5-sham.min.js"></script>
+    <![endif]-->
+    {% block stylePage %}{% endblock %}
+    <!-- 公共js -->
+    {% block globalJs %}{% endblock %}
+  </head>
 
-        {% block stylePage %}{% endblock %}
+  <body {% block bodyClass %}{% endblock %}>
 
-    </head>
+      {% block body %}{% endblock %}
+      {% block js %}{% endblock %}
+      {% block jsPage %}{% endblock %}
 
-    <body {% block bodyClass %}{% endblock %}>
-        
-        {% block body %}{% endblock %}
-
-        {% block globalJs %}{% endblock %}
-        {% block js %}{% endblock %}
-        {% block jsPage %}{% endblock %}
-
-    </body>
+  </body>
 </html>
 
