--- a/generators/app/templates/template/_layout/layout.html
+++ b/generators/app/templates/template/_layout/layout.html
@@ -4,10 +4,14 @@
 {% import "_components/navigator.html" as navigator %}
 
 {% block globalCss %}
-	<link rel="stylesheet" href="{{static}}/css/main.css?v={{ version }}">
+    <link rel="stylesheet" href="{{static}}/css/main.css?v={{ version }}">
 {% endblock %}
 
 {% block globalJs %}
     <script src="{{ bower_components }}/jquery/dist/jquery.min.js?v={{ version }}"></script>
+    <script src="{{ static}}/js/ui.js"></script>
+{% endblock %}
+
+{% block js %}
     <script src="{{ static }}/js/common.js"></script>
 {% endblock %}
