--- a/generators/mobile/templates/template/index.html
+++ b/generators/mobile/templates/template/index.html
@@ -5,5 +5,11 @@
 
 {# body内容 #}
 {% block body %}
-	<h1>首页</h1>
+    <h1>首页</h1>
+{% endblock %}
+
+{% block jsPage %}
+    <script>
+    // code
+    </script>
 {% endblock %}
