--- a/generators/app/templates/template/_layout/base.html
+++ b/generators/app/templates/template/_layout/base.html
@@ -33,7 +33,7 @@
     <!--[if lte IE 9]>
     <script src="{{ bower_components }}/html5shiv/dist/html5shiv.min.js?v={{ version }}"></script>
     <script src="{{ bower_components }}/respond/dest/respond.min.js?v={{ version }}"></script>
-    <script src="{{ bower_components}}/es5-shim/es5-sham.min.js"></script>
+    <script src="{{ bower_components}}/es5-shim/es5-shim.min.js"></script>
     <![endif]-->
     {% block stylePage %}{% endblock %}
     <!-- 公共js -->
