模板增加requirejs方式

--- a/generators/app/templates/template/upgrade.html
+++ b/generators/app/templates/template/upgrade.html
@@ -19,7 +19,7 @@
       <div class="nav-content nav1-content">
           <div class="updatepage">
               <h1 class="text-align-center fn-mb-20">浏览器版本太低</h1>
-              <h3 class="text-align-center fn-mb-40">由于IE6.0浏览器的安全功能较差，为保障您资金的安全性，建议升级至IE7.0以上。
+              <h3 class="text-align-center fn-mb-40">由于IE7.0版本及以下浏览器的安全功能较差，为保障您资金的安全性，建议升级至IE7.0以上。
       </h3>
               <ul class="logo clearfix">
                   <li class="ie">
