--- a/generators/app/templates/template/_layout/layout.html
+++ b/generators/app/templates/template/_layout/layout.html
@@ -8,10 +8,6 @@
 {% endblock %}
 
 {% block globalJs %}
-    <script src="{{ bower_components }}/jquery/dist/jquery.min.js?v={{ version }}"></script>
-    <script src="{{ static}}/js/ui.js"></script>
-{% endblock %}
-
-{% block js %}
+    <script src="{{ bower_components }}/requirejs/require.js"></script>
     <script src="{{ static }}/js/common.js"></script>
 {% endblock %}
